# DAGE

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  LICENSE  TODO  genpot.inp  slater_test.inp
cmake/: Archs.cmake  Compilers.cmake  FindBLAS.cmake  FindLAPACK.cmake  Linalg.cmake  MathLibFunctions.cmake  Revision.cmake
docs/: CMakeLists.txt  Doxyfile.in  README  mainpage.md
include/: xc_funcs.h  xc_version.h
python/: CMakeLists.txt  __init__.py  bubbleblow.py  bubblify_adf.py  chewtm.py  cubicle.in  cuspdens.py  dage.x  fem1d.py  gencusps.py  generate_objects.py  gridur.py  input_parameters.xml  input_reader.py  integration_test.py  mos.py  product.py  t21_to_xyz.py
python/integration_test_files/h2_0.07_output_lda/: scf_energetics.comparison.xml
python/integration_test_files/h2_0.07_output_lda_io/: scf_energetics.xml
python/integration_test_files/h2_0.07_output_lda_lcmo/: scf_energetics.comparison.xml  structure.comparison.xml
python/integration_test_files/h2_0.07_output_lda_lcmo_io/: scf_energetics.xml  structure.xml
python/integration_test_files/h2_0.07_output_pbe/: scf_energetics.comparison.xml
python/integration_test_files/h2_0.07_output_pbe_lcmo/: scf_energetics.comparison.xml  structure.comparison.xml
python/integration_test_files/h2_0.07_output_rhf/: scf_energetics.comparison.xml
python/integration_test_files/h2_0.07_output_rhf_ci/: scf_energetics.comparison.xml  structure.comparison.xml
python/integration_test_files/h2_0.07_output_rhf_gbfmm/: scf_energetics.comparison.xml
python/integration_test_files/h2_0.07_output_rhf_lcmo/: scf_energetics.comparison.xml  structure.comparison.xml
python/integration_test_files/input_files/: ci_test_input.xml  io_test_input.xml  scf_atoms_test_input.xml  scf_gbfmm_test_input.xml  scf_gga_test_input.xml  scf_test2_input.xml  scf_test_input.xml
python/integration_test_files/input_files/basis_sets/: cc-pVDZ.xml
python/integration_test_files/input_files/settings/: ci_settings_lcmo_0.07.xml  ci_settings_lcmo_rdft_0.07.xml  ci_settings_rdft_0.07.xml  ci_settings_rhf_0.07.xml  gbfmm_settings_0.07.xml  lda_settings_0.07.xml  lda_settings_lcmo_0.07.xml  pbe_settings_0.07.xml  pbe_settings_lcmo_0.07.xml  rhf_gbfmm_settings_0.07.xml  rhf_settings_0.07.xml  rhf_settings_lcmo_0.07.xml  settings_0.05.xml  settings_0.07.xml  urhf_settings_0.05.xml  urhf_settings_0.07.xml
python/integration_test_files/input_files/structures/: B.xml  H.xml  H2.xml  H2_lcmo.xml  H2_sr.xml  H2_sr_lcmo.xml  He.xml  Hep.xml  Li.xml  N.xml
python/integration_test_files/li_0.07_output_rohf/: scf_energetics.comparison.xml
python/integration_test_files/li_0.07_output_urhf/: scf_energetics.comparison.xml
python/integration_test_files/n_0.07_output_rohf/: scf_energetics.comparison.xml
sandbox/: CMakeLists.txt
src/: CMakeLists.txt
src/bubbles/: CMakeLists.txt  action.F90  alt_hf_cycle.F90  analytical.F90  bessels.cu  bessels.h  bubbles.F90  bubbles_cuda.cu  bubbles_cuda.h  bubbles_multiplier.cu  bubbles_multiplier.h  cartiter.F90  chrono.F90  ci.F90  core.F90  core_evaluator.F90  coulomb.F90  cube.cu  cube.h  cubeplot.F90  cublas_iface.cpp  cuda.F90  cuda_blas.cu  cuda_blas.h  cuda_commons.cu  cuda_object.F90  cuda_profiling.cu  cuda_profiling.h  diis.F90  evaluators.F90  evaluators.cu  evaluators.h  exponentials.F90  file_format.F90  function3d.F90  function3d_multiplier.cu  function3d_multiplier.h  function3d_types.F90  gauss.F90  gauss_generator.F90  (+56 more)
src/gbfmm/: CMakeLists.txt  README  gbfmm.in.F90  gbfmm_coulomb3d.F90  gbfmm_coulomb3d.cu  gbfmm_coulomb3d.h  gbfmm_function3d.F90  gbfmm_helmholtz3d.F90  gbfmm_helmholtz3d.cu  gbfmm_helmholtz3d.h  gbfmm_laplacian3d.F90  gbfmm_parallel_info.F90  gbfmm_potential_operator.cu  gbfmm_potential_operator.h  run_gbfmm.sh
src/genpot/: CMakeLists.txt  datadump.F90  genpot.in.F90  genpot.in.py
src/getkw/: CMakeLists.txt  __init__.py  getkw.F90  getkw.py  pprinter_getkw.F90  pyparsing.py
tests/: CMakeLists.txt  fmm_gauss_test.F90  gauss_test.F90  gbfmm_potential_test.F90  gbfmm_update_test.F90  helmholtz_test.F90  io_test.F90  iterator_test.F90  multipole_test.F90  multipole_translation_test.F90  multipoles_test.F90  slater_test.F90
utils/: CMakeLists.txt  combine.F90  cubicle.F90  fun2xyz.F90  funinfo.F90  interactor.F90  intercube.F90  interpolator.F90  lcao_rdft_energy.F90  lcao_rhf_energy.F90  lcao_urhf_energy.F90  print_harmonic.F90  python_interface.F90  trim_bubbles.F90
